#!/bin/bash
set -e

v6_45(){
	echo -e "\\n  v.6.45
  - added '-c' flag to display changelog.
  - changed '-s' flag to '-p'.
  - fixed problem with parsing header.
  - track auto parsing progress.
  - fixed progress errors.
  - updated strings in help.
  - display help when when flag is invalid.
  - display changelog after update & install."
}
v6_50(){
	echo -e "\\n  v6.50
  - fixed unary operator bug when parsing a wrong URL.
  - improved connection error detection.
  - workaround truncate error for mac.
  - fixed read flag error for mac.
  - added double quotes to prevent globbing errors.
  - changed uninstall flag to '-d'.
  - create directory for parse at '~/.parseHub'.
  - added '-u' flag to check for updates manually.
  - automatically check for updates.
  - schedule auto-update check if input is negative.
  - added install_parse.sh to install parse.
  - made changelog & help standalone.
  - added '-C' to display full changelog'.
  - fixes for parse.sh to run without installing.
  - detect internet connection in install_parse.sh."
}
v6_55(){
	echo -e "\\n  v6.55
  - use pbcopy instead of xclip on mac.
  - reformat install_parse.sh & parse.sh.
  - fixed some URLs not copying to clipboard
  - removed junk code."
}
v6_60(){
	echo -e "\\n  v6.60
  - possible fix for sed causing errors.
  - changed header to title.\\n"
}

case $l in
	-C) printf %b "\\nchangelog:\\r";v6_45;v6_50;v6_55;v6_60;;
	-c) printf %b "\\nchangelog:\\r";v6_60;;
esac